Update OfficePlayer iframe and add .rooot CSS class
Added a new .rooot class in App.css for centering and sizing the container. Refactored OfficePlayer.jsx to use the iframe element directly with height and width attributes, and updated the title and allowfullscreen properties.

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,13 @@
   box-sizing: border-box;
 }
 
+.rooot{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100dvh;
+}
+
 html,
 body {
   margin: 0;
